fix: icon size on mobile

--- a/assets/sass/vha/pages/vetsmile/vs-stats/_index.scss
+++ b/assets/sass/vha/pages/vetsmile/vs-stats/_index.scss
@@ -45,12 +45,19 @@
    }
 
    .stat-img{
-      width: 126px;
+      width: 96px;
       display: block !important;
-      margin: 30px auto  40px !important;
+      margin: 30px auto  30px !important;
    }
 
 
 
 
  }
+
+
+
+
+
+
+
